--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ edition = "2018"
 [dependencies]
 regex = "1"
 lazy_static = "1"
-
+tokio= {verion = "1", features = ["full"] }
+tokio-stream= "0.1"
+tokio-util={version = "0.6.0", features = ["full"]}
