--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ lazy_static = "1"
 tokio= {version = "1", features = ["full"] }
 tokio-stream= "0.1"
 tokio-util={version = "0.6.0", features = ["full"]}
+cached="0.22.0"
