--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ tokio= {version = "1", features = ["full"] }
 tokio-stream= "0.1"
 tokio-util={version = "0.6.0", features = ["full"]}
 cached="0.22.0"
+pathfinding="2.1.1"
